--- a/Calculator/app/src/main/res/values/styles.xml
+++ b/Calculator/app/src/main/res/values/styles.xml
@@ -15,8 +15,9 @@
         <item name="android:textColor">#4f54f0</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">1dp</item>
-        <item name="android:textSize">25dp</item>
+        <item name="android:textSize">25sp</item>
     </style>
+
     <style name="NumberButton">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
@@ -25,6 +26,17 @@
         <item name="android:textColor">@android:color/black</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">1dp</item>
-        <item name="android:textSize">25dp</item>
+        <item name="android:textSize">25sp</item>
     </style>
+
+    <style name="Button">
+        <item name="android:layout_height">135dp</item>
+        <item name="android:layout_width">110dp</item>
+        <item name="android:layout_marginLeft">1.5dp</item>
+        <item name="android:layout_marginRight">1.5dp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">25sp</item>
+
+    </style>
+
 </resources>
