--- a/Calculator/app/src/main/res/values/styles.xml
+++ b/Calculator/app/src/main/res/values/styles.xml
@@ -34,6 +34,7 @@
         <item name="android:layout_width">110dp</item>
         <item name="android:layout_marginLeft">1.5dp</item>
         <item name="android:layout_marginRight">1.5dp</item>
+        <item name="android:layout_marginTop">0dp</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">25sp</item>
 
