--- a/Calculator/app/src/main/res/values/styles.xml
+++ b/Calculator/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:background">#c6c9c5</item>
-        <item name="android:textColor">#4f54f0</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">1dp</item>
         <item name="android:textSize">25sp</item>
@@ -38,6 +38,26 @@
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">25sp</item>
 
+    </style>
+
+    <style name="ActionButton2">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:background">#c6c9c5</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:textSize">25sp</item>
+    </style>
+
+    <style name="NumberButton2">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:background">#c6c9c5</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:textSize">25sp</item>
     </style>
 
 </resources>
